# Roboracer-2026

./: .gitignore  0.1.csv  RC_RECEIVER_DESIGN.md  Untitled  arduino_rc_receiver_reader.ino  asdf.csv  ch341.ko  dd.csv  ddd.csv  dddd.csv  dumb.csv  fix_ch341_bind.sh  fun.csv  funtest2.csv  funtest_40.csv  ketest1.csv  keyboard_control_node.py  mock_check.csv  mock_hand_roll.csv  real_duty_005_gear11.csv  real_hand_roll_gear11.csv  real_hand_roll_raw.csv  realtest1_0.1.csv  realtest2_0.15.csv  realtest3_10.csv  realtest4_15.csv  realtest5_20.csv  realtest6_25.csv  realtest7_30.csv  test 0.05 to 0.25.csv  test 0.1 to 0.3.csv  test 0.15 to 0.25.csv  test 0.2 to 0.3.csv  test 0.2 to 0.35.csv  test 0.3.csv  test0.4.csv  test10_free.csv  test1_0.1.csv  test2_0.1.py.csv  test3_.01.csv  (+13 more)
log/: latest_build
maps/: cartographer_map_20260628_145249.pbstream  cartographer_map_20260628_145249_rosmap.pgm  cartographer_map_20260628_145249_rosmap.yaml  cartographer_map_20260628_220138.pbstream  cartographer_map_20260628_220138.yaml  cartographer_map_20260628_220138_origin.yaml  cartographer_map_20260628_220238.pbstream  cartographer_map_20260628_220238_origin.yaml  cartographer_map_20260628_220238_rosmap.pgm  cartographer_map_20260628_220238_rosmap.yaml  cartographer_map_20260628_220338.pbstream  cartographer_map_20260628_220338_origin.yaml  cartographer_map_20260628_220338_rosmap.pgm  cartographer_map_20260628_220338_rosmap.yaml  cartographer_map_20260628_220438.pbstream  cartographer_map_20260628_220438.yaml  cartographer_map_20260628_220438_origin.yaml  cartographer_map_20260628_220538.pbstream  cartographer_map_20260628_220538.yaml  cartographer_map_20260628_220538_origin.yaml  (+142 more)
src/localization_layer/: CMakeLists.txt  package.xml
src/localization_layer/config/: cartographer_2d_localization.lua  cartographer_2d_mapping_imu_lidar_no_odom.lua  map_builder_mapping.lua
src/localization_layer/launch/: cartographer_localization_launch.py  cartographer_mapping_launch.py  localization_launch_common.py  mapping_sensor_bringup_launch.py
src/localization_layer/rviz/: localization.rviz
src/localization_layer/scripts/: fix_rviz_x11_access.sh  install_lidar_network.sh  install_rviz_desktop_access.sh  localization_global_align.py  localization_initial_pose_setter.py  localization_rviz.sh  localization_tf_bootstrap.py  map_auto_saver.py  run_localization_rviz.sh  rviz-xhost-at-boot.sh  setup_lidar_network.sh  static_map_publisher.py
test/: hallsensor_test.py  (+7 more)
(+167 files in other folders)
